--- a/HealthyApp_63133714/app/src/main/AndroidManifest.xml
+++ b/HealthyApp_63133714/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.HealthyApp_63133714"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
+            android:name=".DetailActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -21,6 +21,13 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
