--- a/HealthyApp_63133714/app/src/main/AndroidManifest.xml
+++ b/HealthyApp_63133714/app/src/main/AndroidManifest.xml
@@ -13,21 +13,21 @@
         android:theme="@style/Theme.HealthyApp_63133714"
         tools:targetApi="31">
         <activity
-            android:name=".DetailActivity"
+            android:name=".Activity.DetailActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".IntroActivity"
+            android:name=".Activity.IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
